WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
136329
ASSERTION FAILED: !m_renderView.document().inPageCache() in compositing/iframes/resources/page-cache-helper.html
https://bugs.webkit.org/show_bug.cgi?id=136329
Summary
ASSERTION FAILED: !m_renderView.document().inPageCache() in compositing/ifram...
Andreas Kling
Reported
2014-08-27 21:13:57 PDT
Spotted this on the Mavericks WK1 debug bot: ASSERTION FAILED: !m_renderView.document().inPageCache() /Volumes/Data/slave/mavericks-debug/build/Source/WebCore/rendering/RenderLayerCompositor.cpp(653) : void WebCore::RenderLayerCompositor::updateCompositingLayers(WebCore::CompositingUpdateType, WebCore::RenderLayer *) 1 0x104dde250 WTFCrash 2 0x109b2414c WebCore::RenderLayerCompositor::updateCompositingLayers(WebCore::CompositingUpdateType, WebCore::RenderLayer*) 3 0x109b1e9ea WebCore::RenderLayerCompositor::updateCompositingLayersTimerFired(WebCore::Timer<WebCore::RenderLayerCompositor>&) 4 0x109b3b54e std::__1::__function::__func<std::__1::__bind<void (WebCore::RenderLayerCompositor::*&)(WebCore::Timer<WebCore::RenderLayerCompositor>&), WebCore::RenderLayerCompositor*&, std::__1::reference_wrapper<WebCore::Timer<WebCore::RenderLayerCompositor> > >, std::__1::allocator<std::__1::__bind<void (WebCore::RenderLayerCompositor::*&)(WebCore::Timer<WebCore::RenderLayerCompositor>&), WebCore::RenderLayerCompositor*&, std::__1::reference_wrapper<WebCore::Timer<WebCore::RenderLayerCompositor> > > >, void ()>::operator()() 5 0x10834070a std::__1::function<void ()>::operator()() const 6 0x109b3904c WebCore::Timer<WebCore::RenderLayerCompositor>::fired() 7 0x10a17285c WebCore::ThreadTimers::sharedTimerFiredInternal() 8 0x10a172519 WebCore::ThreadTimers::sharedTimerFired() 9 0x109e5cd5f WebCore::timerFired(__CFRunLoopTimer*, void*) 10 0x7fff97d603e4 __CFRUNLOOP_IS_CALLING_OUT_TO_A_TIMER_CALLBACK_FUNCTION__ 11 0x7fff97d5ff1f __CFRunLoopDoTimer 12 0x7fff97dd15aa __CFRunLoopDoTimers 13 0x7fff97d1b6a5 __CFRunLoopRun 14 0x7fff97d1ae75 CFRunLoopRunSpecific 15 0x10423bb65 runTest(std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> > const&) 16 0x10423a7fa runTestingServerLoop() 17 0x10423a025 dumpRenderTree(int, char const**) 18 0x10423c3f7 DumpRenderTreeMain(int, char const**) 19 0x10428c062 main 20 0x7fff90cef5fd start 21 0x2
Attachments
Patch
(3.01 KB, patch)
2014-08-27 21:15 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2014-08-27 21:15:43 PDT
Created
attachment 237286
[details]
Patch
alan
Comment 2
2014-08-27 21:18:25 PDT
So you decided to not to go with the suspendable group timer controlled by RenderView?
Andreas Kling
Comment 3
2014-08-27 21:21:56 PDT
(In reply to
comment #2
)
> So you decided to not to go with the suspendable group timer controlled by RenderView?
Maybe later. :)
WebKit Commit Bot
Comment 4
2014-08-28 10:54:48 PDT
Comment on
attachment 237286
[details]
Patch Clearing flags on attachment: 237286 Committed
r173066
: <
http://trac.webkit.org/changeset/173066
>
WebKit Commit Bot
Comment 5
2014-08-28 10:54:54 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug